--- a/imprint-en.html
+++ b/imprint-en.html
@@ -25,7 +25,7 @@
 <body>
 
 
-<a href="index-en.html" aria-label="Back to homepage" class="fixed top-20 left-4 z-50 bg-purple-600 text-white px-4 py-2 rounded-full shadow-lg hover:bg-purple-700 transition hidden sm:inline-block">
+<a href="index-en.html" aria-label="Home" class="fixed top-20 left-4 z-50 bg-purple-600 text-white px-4 py-2 rounded-full shadow-lg hover:bg-purple-700 transition hidden sm:inline-block">
   ← Back to Homepage
 </a>
 
