--- a/privacy-en.html
+++ b/privacy-en.html
@@ -55,7 +55,7 @@
 
 
   <a href="index-en.html" class="fixed top-20 left-4 z-50 bg-purple-600 text-white px-4 py-2 rounded-full shadow-lg hover:bg-purple-700 transition hidden sm:inline-block">
-    ← Homepage
+    ← Home
   </a>
 
 
@@ -208,7 +208,7 @@
     <a href="index-en.html#recent-events" class="hover:text-purple-600">Highlights</a>
 <li><a href="references-en.html" class="text-white">References</a></li>
     <li><a href="index-en.html#next-events" class="text-white">Upcoming Events</a></li>
-    <li><a href="imprint-en.html" class="text-white">Imprint</a></li>
+    <li><a href="imprint-en.html" class="text-white">Legal Notice</a></li>
     <li><a href="privacy-en.html" class="text-white">Privacy Policy</a></li>
   </ul>
 </div>
