--- a/imprint-en.html
+++ b/imprint-en.html
@@ -26,7 +26,7 @@
 
 
 <a href="index-en.html" aria-label="Home" class="fixed top-20 left-4 z-50 bg-purple-600 text-white px-4 py-2 rounded-full shadow-lg hover:bg-purple-700 transition hidden sm:inline-block">
-  ← Back to Homepage
+  ← Home
 </a>
 
 
@@ -102,7 +102,7 @@
   <strong>Jonny Fankhauser</strong><br />
   DJ Jonny<br />
   Höf 52<br />
-  5020 Taxenbach<br />
+  5660 Taxenbach<br />
   Austria
 </p>
 <p>
