--- a/imprint.html
+++ b/imprint.html
@@ -8,8 +8,8 @@
   <meta name="author" content="DJ Jonny" />
   <meta property="og:title" content="DJ Jonny – Impressum" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.djjonny.at/imprint.html" />
-  <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+  <meta property="og:url" content="https://www.dj-jonny.at/imprint.html" />
+  <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
 <meta property="og:description" content="Rechtliche Informationen und Kontaktangaben von DJ Jonny gemäß § 5 E-Commerce-Gesetz (ECG)." />
 
 
@@ -96,7 +96,7 @@
         <strong>Jonny Fankhauser</strong><br />
         DJ Jonny<br />
         Höf 52<br />
-        5020 Taxenbach<br />
+        5660 Taxenbach<br />
         Österreich
       </p>
       <p>
