--- a/index-ru.html
+++ b/index-ru.html
@@ -21,8 +21,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="DJ Jonny – Ваш DJ для вечеринок и мероприятий" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.djjonny.at/" />
-    <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+    <meta property="og:url" content="https://www.dj-jonny.at/" />
+    <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
     <meta
         property="og:description"
         content="Будь то клуб, свадьба или корпоратив – DJ Jonny из Китцбюэля заставит толпу танцевать под биты и вайб. Забронируйте дату прямо сейчас!"
