--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     />
     <meta
         name="description"
-        content="DJ Jonny aus Kitzbühel bringt mit seinem unverwechselbaren Sound jede Party zum Beben – egal ob Hochzeit, Clubnacht oder Firmenevent. Jetzt buchen!"
+        content="DJ Jonny bringt mit seinem unverwechselbaren Sound jede Party zum Beben – egal ob Hochzeit, Clubnacht oder Firmenevent. Jetzt buchen!"
     />
     <meta name="author" content="DJ Jonny" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="DJ Jonny – Der DJ für Partys & Events" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.djjonny.at/" />
-    <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+    <meta property="og:url" content="https://www.dj-jonny.at/" />
+    <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
     <meta
         property="og:description"
-        content="Ob Club, Hochzeit oder Firmenfeier – DJ Jonny aus Kitzbühel bringt die Crowd mit Beats und Vibes zum Tanzen. Jetzt Termin sichern!"
+        content="Ob Club, Hochzeit oder Firmenfeier – DJ Jonny bringt die Crowd mit Beats und Vibes zum Tanzen. Jetzt Termin sichern!"
     />
 
-    <title>DJ Jonny – Dein DJ in Kitzbühel für Hochzeiten, Partys & Events</title>
+    <title>DJ Jonny – Dein DJ für Hochzeiten, Partys & Events</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css" />
