--- a/privacy-en.html
+++ b/privacy-en.html
@@ -11,8 +11,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="DJ Jonny – Privacy Policy" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.djjonny.at/privacy-en.html" />
-  <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+  <meta property="og:url" content="https://www.dj-jonny.at/privacy-en.html" />
+  <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
   <meta property="og:description" content="Here you'll find all information about data protection at DJ Jonny – clear & GDPR-compliant." />
 
   <title>DJ Jonny – Privacy Policy</title>
@@ -127,7 +127,7 @@
         <strong>Jonny Fankhauser</strong><br />
         DJ Jonny<br />
         Höf 52<br />
-        5020 Taxenbach<br />
+        5660 Taxenbach<br />
         Austria<br />
         Email: <a href="mailto:office@dj-jonny.at" class="text-purple-600 hover:underline">office@dj-jonny.at</a><br />
         Phone: +43 677 61667518
