--- a/privacy-ru.html
+++ b/privacy-ru.html
@@ -11,8 +11,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="DJ Jonny – Политика конфиденциальности" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.djjonny.at/privacy-ru.html" />
-  <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+  <meta property="og:url" content="https://www.dj-jonny.at/privacy-ru.html" />
+  <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
   <meta property="og:description" content="Здесь вы найдете всю информацию о защите данных у DJ Jonny – понятно и в соответствии с GDPR." />
 
   <title>DJ Jonny – Политика конфиденциальности</title>
@@ -127,7 +127,7 @@
         <strong>Jonny Fankhauser</strong><br />
         DJ Jonny<br />
         Höf 52<br />
-        5020 Taxenbach<br />
+        5660 Taxenbach<br />
         Австрия<br />
         Email: <a href="mailto:office@dj-jonny.at" class="text-purple-600 hover:underline">office@dj-jonny.at</a><br />
         Телефон: +43 677 61667518
