--- a/privacy-zh.html
+++ b/privacy-zh.html
@@ -11,8 +11,8 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="DJ Jonny – 隐私政策" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.djjonny.at/privacy-zh.html" />
-  <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+  <meta property="og:url" content="https://www.dj-jonny.at/privacy-zh.html" />
+  <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
   <meta property="og:description" content="在这里您可以找到DJ Jonny关于数据保护的所有信息 - 清晰且符合GDPR。" />
 
   <title>DJ Jonny – 隐私政策</title>
@@ -127,7 +127,7 @@
         <strong>Jonny Fankhauser</strong><br />
         DJ Jonny<br />
         Höf 52<br />
-        5020 Taxenbach<br />
+        5660 Taxenbach<br />
         奥地利<br />
         电子邮件: <a href="mailto:office@dj-jonny.at" class="text-purple-600 hover:underline">office@dj-jonny.at</a><br />
         电话: +43 677 61667518
