--- a/references-en.html
+++ b/references-en.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <meta name="keywords" content="DJ Jonny, DJ References, Kitzbühel, best dj, DJ Austria" />
+  <meta name="keywords" content="DJ Jonny, DJ References, Johann Fankhauser, best dj, DJ Austria" />
   <meta name="description" content="References of DJ Jonny" />
   <meta name="author" content="DJ Jonny" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:title" content="DJ Jonny –References" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.djjonny.at/privacy-en.html" />
-  <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+  <meta property="og:url" content="https://www.dj-jonny.at/privacy-en.html" />
+  <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
   <meta property="og:description" content="Here you'll find all information about data protection at DJ Jonny – clear & GDPR-compliant." />
 
   <title>DJ Jonny – References</title>
@@ -76,10 +76,10 @@
 
     <div class="flex items-center gap-3">
       <div class="hidden sm:flex gap-2 items-center">
-<a href="privacy.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="privacy-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="privacy-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="privacy-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+<a href="references.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="references-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="references-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="references-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
       <div class="sm:hidden">
         <button onclick="document.getElementById('mobile-menu').classList.toggle('hidden')" class="text-purple-600 focus:outline-none">
@@ -99,10 +99,10 @@
       <a href="index-en.#about-me" class="text-purple-700 font-medium hover:text-purple-900">About Me</a>
       <a href="index-en.#services" class="text-purple-700 font-medium hover:text-purple-900">Services</a>
       <div class="flex gap-4 pt-2">
- <a href="privacy.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
-<a href="privacy-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
-<a href="privacy-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
-<a href="privacy-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
+ <a href="references.html" class="flag-icon flag-icon-de w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Deutsch"></a>
+<a href="references-en.html" class="flag-icon flag-icon-us w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="English"></a>
+<a href="references-zh.html" class="flag-icon flag-icon-cn w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="中文"></a>
+<a href="references-ru.html" class="flag-icon flag-icon-ru w-6 h-6 drop-shadow-[0_-1px_1px_rgba(0,0,0,0.3)] rounded" title="Русский"></a>
       </div>
     </div>
   </div>
@@ -596,10 +596,10 @@
 <div class="mb-6">
    <h5 class="uppercase font-bold mb-2.5">Languages</h5>
         <ul class="list-none">
-<li><a href="privacy.html" class="text-white">German</a></li>
-<li><a href="privacy-en.html" class="text-white">English</a></li>
-<li><a href="privacy-zh.html" class="text-white">Chinese</a></li>
-<li><a href="privacy-ru.html" class="text-white">Russian</a></li>
+<li><a href="references.html" class="text-white">German</a></li>
+<li><a href="references-en.html" class="text-white">English</a></li>
+<li><a href="references-zh.html" class="text-white">Chinese</a></li>
+<li><a href="references-ru.html" class="text-white">Russian</a></li>
   </ul>
 </div>
 
