--- a/index-zh.html
+++ b/index-zh.html
@@ -17,8 +17,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="DJ Jonny – 派对与活动 DJ" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.djjonny.at/" />
-    <meta property="og:image" content="https://www.djjonny.at/images/dj-jonny.jpg" />
+    <meta property="og:url" content="https://www.dj-jonny.at/" />
+    <meta property="og:image" content="https://www.dj-jonny.at/images/dj-jonny.jpg" />
     <meta
         property="og:description"
         content="无论是俱乐部、婚礼还是公司庆典——来自基茨比厄尔的 DJ Jonny 都能用节奏和氛围让人们舞动。立即锁定档期！"
@@ -399,9 +399,9 @@
           <div class="flex-shrink-0 w-[85vw] snap-start p-2" data-snap-card>
             <div class="bg-zinc-900 text-gray-100 shadow rounded-xl px-5 py-6 h-full">
               <i class="mdi mdi-music-circle-outline text-white mb-5 text-5xl block"></i>
-              <span class="font-bold text-base sm:text-xl">活动与派对 DJ</span>
+              <span class="font-bold text-base sm:text-xl">活动与派对DJ服务</span>
               <p class="mt-2 text-left text-sm sm:text-base">
-                无论是婚礼、公司活动、生日派对、俱乐部、城市节庆或大型舞台，我都能凭借经验与对观众的把握，以恰到好处的节奏点燃全场。
+                我专为婚礼、企业活动、生日派对、俱乐部、城市庆典及大型舞台打造完美氛围。凭借丰富经验、对观众情绪的精准把控，以及在关键时刻播放恰到好处的节奏，让每场活动都成为亮点。
               </p>
             </div>
           </div>
@@ -409,20 +409,20 @@
           <div class="flex-shrink-0 w-[85vw] snap-start p-2" data-snap-card>
             <div class="bg-zinc-900 text-gray-100 shadow rounded-xl px-5 py-6 h-full">
               <i class="mdi mdi-speaker-wireless text-white mb-5 text-5xl block"></i>
-              <span class="font-bold text-base sm:text-xl">音响与灯光技术</span>
+              <span class="font-bold text-base sm:text-xl">音响与灯光系统</span>
               <p class="mt-2 text-left text-sm sm:text-base">
-                我不仅带来音乐，还能提供从震撼音效到氛围灯光的整套设备，包括舞台搭建、烟雾机和灯光效果，全部一站式搞定。
-                我不仅带来音乐，还提供完整设备。从浑厚音效到氛围灯光，包括舞台搭建、烟雾机与灯光效果，一站式服务。
+                我不只提供音乐，更提供全套设备。从震撼音效到氛围灯光——包括舞台搭建、烟雾机和灯光特效——所有服务一站式提供。
+              </p>
             </div>
           </div>
 
           <div class="flex-shrink-0 w-[85vw] snap-start p-2" data-snap-card>
             <div class="bg-zinc-900 text-gray-100 shadow rounded-xl px-5 py-6 h-full">
               <i class="mdi mdi-clipboard-check-outline text-white mb-5 text-5xl block"></i>
-              <span class="font-bold text-base sm:text-xl">全程活动协助</span>
+              <span class="font-bold text-base sm:text-xl">全流程活动支持</span>
               <p class="mt-2 text-left text-sm sm:text-base">
-                想完全无忧？我提供量身打造的整套方案：从策划、技术、音乐到流程，全为你的活动而设。你尽情享受派对，剩下的交给我。
-                想毫无烦恼地享受活动？我提供一条龙服务：量身规划、技术、音乐与流程，全都为你的活动量身定制。你只需享受派对，其他交给我。
+                想要轻松享受您的活动？我来全面负责——提供量身定制的全流程服务：从策划、音响、灯光、音乐到现场协调。您尽情庆祝，其余交给我处理。
+              </p>
             </div>
           </div>
 
@@ -433,26 +433,26 @@
       <div class="hidden lg:grid lg:grid-cols-3 gap-4 mt-4">
         <div class="bg-zinc-900 text-gray-100 shadow rounded-xl px-5 py-6 h-full">
           <i class="mdi mdi-music-circle-outline text-white mb-5 text-5xl block"></i>
-          <span class="font-bold text-base sm:text-xl">活动与派对 DJ</span>
+          <span class="font-bold text-base sm:text-xl">活动与派对DJ服务</span>
           <p class="mt-2 text-left text-sm sm:text-base">
-            无论是婚礼、公司活动、生日派对、俱乐部、城市节庆或大型舞台，我都能凭借经验与对观众的把握，以恰到好处的节奏点燃全场。
+            我专为婚礼、企业活动、生日派对、俱乐部、城市庆典及大型舞台打造完美氛围。凭借丰富经验、对观众情绪的精准把控，以及在关键时刻播放恰到好处的节奏，让每场活动都成为亮点。
           </p>
         </div>
 
         <div class="bg-zinc-900 text-gray-100 shadow rounded-xl px-5 py-6 h-full">
           <i class="mdi mdi-speaker-wireless text-white mb-5 text-5xl block"></i>
-          <span class="font-bold text-base sm:text-xl">音响与灯光技术</span>
+          <span class="font-bold text-base sm:text-xl">音响与灯光系统</span>
           <p class="mt-2 text-left text-sm sm:text-base">
-            我不仅带来音乐，还能提供从震撼音效到氛围灯光的整套设备，包括舞台搭建、烟雾机和灯光效果，全部一站式搞定。
-            我不仅带来音乐，还提供完整设备。从浑厚音效到氛围灯光，包括舞台搭建、烟雾机与灯光效果，一站式服务。
+            我不只提供音乐，更提供全套设备。从震撼音效到氛围灯光——包括舞台搭建、烟雾机和灯光特效——所有服务一站式提供。
+          </p>
         </div>
 
         <div class="bg-zinc-900 text-gray-100 shadow rounded-xl px-5 py-6 h-full">
           <i class="mdi mdi-clipboard-check-outline text-white mb-5 text-5xl block"></i>
-          <span class="font-bold text-base sm:text-xl">全程活动协助</span>
+          <span class="font-bold text-base sm:text-xl">全流程活动支持</span>
           <p class="mt-2 text-left text-sm sm:text-base">
-            想完全无忧？我提供量身打造的整套方案：从策划、技术、音乐到流程，全为你的活动而设。你尽情享受派对，剩下的交给我。
-            想毫无烦恼地享受活动？我提供一条龙服务：量身规划、技术、音乐与流程，全都为你的活动量身定制。你只需享受派对，其他交给我。
+            想要轻松享受您的活动？我来全面负责——提供量身定制的全流程服务：从策划、音响、灯光、音乐到现场协调。您尽情庆祝，其余交给我处理。
+          </p>
         </div>
       </div>
     </div>
@@ -471,7 +471,7 @@
     const maxScrollLeft = container.scrollWidth - container.clientWidth;
     const tolerance = 5;
 
-    // 调试输出（可选）
+    // Debug-Ausgabe (optional)
     // console.log('scrollLeft:', scrollLeft, 'max:', maxScrollLeft);
 
     leftBtn.style.display = scrollLeft <= tolerance ? 'none' : 'block';
@@ -750,7 +750,7 @@
 
 
 
-<!--即将到来的活动 -->
+<!--Upcoming Events -->
 
 
 <section class="bg-white border-b py-8 px-6" id="next-events-section">
@@ -762,6 +762,7 @@
       <div class="h-1 mx-auto bg-purple-600 w-96 my-0 py-0 rounded-t"></div>
     </div>
     <ol class="border-l-2 border-purple-600 space-y-10">
+      
       <!-- Sundowner KrallerAlm -->
       <li data-aos="fade-down">
         <div class="md:flex flex-start">
@@ -774,11 +775,11 @@
                 Krallerhof, Leogang
               </span>
               <span class="font-medium text-purple-600 text-xs sm:text-sm">
-                夏季每周五下午5点开始
+               每周五 17:00 开始（夏季）
               </span>
             </div>
             <p class="text-gray-200">
-              夕阳美景相伴：Krallerhof 的传奇 Sundowner 每周五晚在湖边带来现场 DJ，配上美景和清爽饮品，是优雅开启周末的最佳方式。
+              落日氛围，极致视野：Krallerhof 的传奇 Sundowner 是你周五晚的最佳聚会地。湖边DJ现场演出、冰爽饮品和壮丽的莱奥冈山景——用最时尚的方式开启周末！
             </p>
           </div>
         </div>
@@ -796,11 +797,11 @@
                 Kaiserbad, Ellmau
               </span>
               <span class="font-medium text-purple-600 text-xs sm:text-sm">
-                夏季每周四下午5点开始
+                每周四 17:00 开始（夏季）
               </span>
             </div>
             <p class="text-gray-200">
-              辛苦工作后更要尽情放松：Ellmau Kaiserbad 的 After Work 活动每周举行，池畔轻松音乐和鸡尾酒让你全身舒畅。DJ Jonny 将在 2025 年 6 月 26 日与 7 月 31 日登场，敬请期待！ 
+              工作努力，放松更尽兴！Kaiserbad 的 After Work 活动是你每周的理想放松时光——轻松的音乐、鸡尾酒、池畔氛围。DJ Jonny 将于2025年6月26日和7月31日现场演出，不容错过！
             </p>
           </div>
         </div>
@@ -815,18 +816,19 @@
           <div class="block p-6 rounded-xl bg-zinc-900 ml-6">
             <div class="flex justify-between mb-4">
               <span class="font-medium text-purple-600 text-xs sm:text-sm">
-                Kaisersaal, St. Johann in Tirol
+                Kaisersaal, St. Johann in Tyrol
               </span>
               <span class="font-medium text-purple-600 text-xs sm:text-sm">
-                Samstag, 20. September 2025, ab 20:30 Uhr
+                2025年9月20日（周六），晚8:30开始
               </span>
             </div>
             <p class="text-gray-200">
-              传统饺子盛宴之后，Kaisersaal 的 Knöddelclubbing 随即开唱。DJ Jonny 的节拍配上冰镇啤酒，瞬间点燃舞池，派对一路狂欢到清晨。
+              传统饺子晚宴结束后，就是派对时间！在Kaisersaal标志性的Knödelclubbing，DJ Jonny将点燃全场——劲爆音乐、冰镇饮品、舞池嗨到天亮。本地风情与狂欢气氛完美结合！
             </p>
           </div>
         </div>
       </li>
+
     </ol>
   </div>
 </section>
@@ -835,7 +837,8 @@
 
 
 
-<!--关于我 -->
+
+<!--Über mich -->
 
 
 
@@ -903,62 +906,60 @@
            class="flex sm:flex-col overflow-x-auto gap-4 snap-x snap-mandatory pb-4 sm:overflow-visible overscroll-x-auto scroll-smooth min-w-0"
            style="scroll-padding-left: 1rem; padding-left: 1rem; padding-right: 1rem;">
 
-        <!-- Event 1 -->
-        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
-          <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none">
-            <div class="sm:w-1/2">
-              <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
-                Leogang 山地车世锦赛激情回顾
-              </h3>
-              <p class="text-gray-600">
-在 Leogang 举办的 UCI 山地车世锦赛上，我负责带动全场气氛——Kralleralm 简直燃爆！
-                <br><br>
-                运动、山景与音乐的结合无与伦比，能参与其中我感到非常荣幸。Leogang，我还会再来！
-              </p>
-            </div>
-            <div class="sm:w-1/2">
-              <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/p1.jpg" alt="MTB Leogang" />
-            </div>
-          </div>
-        </div>
+<!-- Event 1 -->
+<div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
+  <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none">
+    <div class="sm:w-1/2">
+      <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
+        莱奥冈山地自行车世锦赛，激情四射
+      </h3>
+      <p class="text-gray-600">
+        很荣幸能在UCI山地自行车世界锦标赛莱奥冈站担任DJ——KrallerAlm现场气氛燃爆全场！<br><br>
+        运动、群山与音乐的融合，真的无法比拟。能够参与到如此盛大的赛事，并用我的音乐点燃现场，是一种享受。Leogang——咱们明年再见！
+      </p>
+    </div>
+    <div class="sm:w-1/2">
+      <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/p1.jpg" alt="MTB Leogang" />
+    </div>
+  </div>
+</div>
 
-        <!-- Event 2 -->
-        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
-          <div class="flex flex-col-reverse sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-right">
-            <div class="sm:w-1/2">
-              <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/p2.jpg" alt="Mozart100" />
-            </div>
-            <div class="sm:w-1/2">
-              <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
-                音乐、泥泞与激情——我的 Mozart 100 固定档期
-              </h3>
-              <p class="text-gray-600">
-<em>mozart 100 by UTMB®</em> 在萨尔茨堡已成为我的年度传统，今年依旧精彩！作为 DJ，我在赛道沿途用节拍和口播为选手加油，带来无数激动时刻。
-                <br><br>
-                从起点到终点，无论晴雨，气氛始终电力十足。对我来说，这项活动年年都是亮点——萨尔茨堡，依旧迷人！
-              </p>
-            </div>
-          </div>
-        </div>
+<!-- Event 2 -->
+<div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
+  <div class="flex flex-col-reverse sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-right">
+    <div class="sm:w-1/2">
+      <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/p2.jpg" alt="Mozart100" />
+    </div>
+    <div class="sm:w-1/2">
+      <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
+        音乐、泥泞与奇迹——我的年度Mozart100传统
+      </h3>
+      <p class="text-gray-600">
+        <em>mozart 100 by UTMB®</em> 已成为我每年最期待的赛事之一，今年依然精彩绝伦！作为DJ，我全程用音乐、现场互动和激情时刻陪伴每一位选手。<br><br>
+        无论风雨、从起点到终点，现场氛围始终高涨。这场盛会年年都是我的高光时刻。萨尔茨堡，你总能带给我惊喜！
+      </p>
+    </div>
+  </div>
+</div>
 
-        <!-- Event 3 -->
-        <div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
-          <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-left">
-            <div class="sm:w-1/2">
-              <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
-                饺子、节拍与派对——我在 Knödelclubbing 的演出
-              </h3>
-              <p class="text-gray-600">
-在蒂罗尔圣约翰的饺子节品尝各种饺子后，狂欢在 Kaisersaal 继续。Knödelclubbing 上，我负责音乐。
-                <br><br>
-                能参加这场独特活动并用音乐带动宾客，是一次特别的体验；传统美食与现代节奏让夜晚难以忘怀。
-              </p>
-            </div>
-            <div class="sm:w-1/2">
-              <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/knoedel.png" alt="Knödelclubbing" />
-            </div>
-          </div>
-        </div>
+<!-- Event 3 -->
+<div class="flex-shrink-0 w-[90vw] sm:w-full snap-start sm:mb-12 last:sm:mb-0 p-4 sm:p-0" data-snap-card>
+  <div class="flex flex-col sm:flex-row gap-4 bg-white sm:bg-transparent sm:shadow-none sm:rounded-none" data-aos="fade-left">
+    <div class="sm:w-1/2">
+      <h3 class="text-xl sm:text-3xl text-gray-800 font-bold leading-none mb-3">
+        饺子、节拍与爆满舞池——Knödelclubbing！
+      </h3>
+      <p class="text-gray-600">
+        在圣约翰Knödelfest品尝各种饺子后，狂欢继续转战Kaisersaal——而我则用音乐持续点燃全场！<br><br>
+        能参加这样独特的活动、用我的音乐带动现场，真的非常特别。传统美食与现代节拍的碰撞，让这晚成为难忘回忆。
+      </p>
+    </div>
+    <div class="sm:w-1/2">
+      <img class="w-full h-64 sm:h-[280px] object-cover rounded-xl" src="img/knoedel.png" alt="Knödelclubbing" />
+    </div>
+  </div>
+</div>
+
 
       </div>
 
