--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+<link rel="icon" type="image/png" href="img/icon.logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta
@@ -23,6 +24,8 @@
         property="og:description"
         content="Ob Club, Hochzeit oder Firmenfeier – DJ Jonny bringt die Crowd mit Beats und Vibes zum Tanzen. Jetzt Termin sichern!"
     />
+
+
 
     <title>DJ Jonny – Dein DJ für Hochzeiten, Partys & Events</title>
 
