--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta
         name="keywords"
-        content="DJ Jonny, DJ Kitzbühel, Event-DJ Tirol, männlicher DJ, Party-DJ, Hochzeits-DJ Kitzbühel, Techno-DJ, Club-DJ, DJ buchen, DJ Österreich, Musikunterhaltung, DJ-Booking"
+        content="DJ Jonny, DJ Tirol, Event-DJ Tirol, männlicher DJ, Party-DJ, Hochzeits-DJ Tirol, DJ Salzburg, Club-DJ, DJ buchen, DJ Österreich, Musikunterhaltung, DJ-Booking"
     />
     <meta
         name="description"
@@ -791,27 +791,29 @@
         </div>
       </li>
 
-      <!-- After Work Kaiserbad Ellmau -->
-      <li data-aos="fade-down">
-        <div class="md:flex flex-start">
-          <div class="bg-purple-600 w-8 h-8 flex items-center justify-center rounded-full -ml-4 min-w-[2rem]">
-            <i class="mdi mdi-pool text-white w-4 h-4"></i>
-          </div>
-          <div class="block p-6 rounded-xl bg-zinc-900 ml-6">
-            <div class="flex justify-between mb-4">
-              <span class="font-medium text-purple-600 text-xs sm:text-sm">
-                Kaiserbad, Ellmau
-              </span>
-              <span class="font-medium text-purple-600 text-xs sm:text-sm">
-                Jeden Donnerstag im Sommer, ab 17 Uhr
-              </span>
-            </div>
-            <p class="text-gray-200">
-              Nach der Arbeit direkt ins Kaiserbad: Das After-Work-Event in Ellmau lädt einmal in der Woche zum Entspannen ein – mit Chillout-Musik, Cocktails und entspannter Stimmung im Wasser. Ideal für alle, die den Feierabend mit Stil genießen möchten. DJ Jonny ist am 26.06.2025 und 31.07.2025 am Start. 
-            </p>
-          </div>
-        </div>
-      </li>
+<!-- After Work Kaiserbad Ellmau -->
+<li data-aos="fade-down">
+  <div class="md:flex flex-start">
+    <div class="bg-purple-600 w-8 h-8 flex items-center justify-center rounded-full -ml-4 min-w-[2rem]">
+      <i class="mdi mdi-pool text-white w-4 h-4"></i>
+    </div>
+    <div class="block p-6 rounded-xl bg-zinc-900 ml-6">
+      <div class="flex justify-between mb-4 flex-col sm:flex-row gap-1 sm:gap-0">
+        <span class="font-medium text-purple-600 text-xs sm:text-sm">
+          Kaiserbad, Ellmau
+        </span>
+        <span class="font-medium text-purple-600 text-xs sm:text-sm flex items-center gap-2">
+          Jeden Donnerstag im Sommer, ab 17 Uhr
+          <span class="text-purple-600 text-xs font-normal">(nur bei Schönwetter)</span>
+        </span>
+      </div>
+      <p class="text-gray-200">
+        Nach der Arbeit direkt ins Kaiserbad: Das After-Work-Event in Ellmau lädt einmal in der Woche zum Entspannen ein – mit Chillout-Musik, Cocktails und entspannter Stimmung im Wasser. Ideal für alle, die den Feierabend mit Stil genießen möchten. DJ Jonny ist am 26.06.2025 und 31.07.2025 am Start. 
+      </p>
+    </div>
+  </div>
+</li>
+
 
       <!-- Knöddelclubbing St. Johann -->
       <li data-aos="fade-down">
