--- a/index.html
+++ b/index.html
@@ -807,9 +807,11 @@
           <span class="text-purple-600 text-xs font-normal">(nur bei Schönwetter)</span>
         </span>
       </div>
-      <p class="text-gray-200">
-        Nach der Arbeit direkt ins Kaiserbad: Das After-Work-Event in Ellmau lädt einmal in der Woche zum Entspannen ein – mit Chillout-Musik, Cocktails und entspannter Stimmung im Wasser. Ideal für alle, die den Feierabend mit Stil genießen möchten. DJ Jonny ist am 26.06.2025 und 31.07.2025 am Start. 
-      </p>
+<p class="text-gray-200">
+  Nach der Arbeit direkt ins 
+  <a href="https://www.kaiserbad.com" target="_blank" rel="noopener noreferrer" class="text-gray-200 underline hover:text-purple-300 transition">
+    Kaiserbad</a>: Das After-Work-Event in Ellmau lädt einmal in der Woche zum Entspannen ein – mit Chillout-Musik, Cocktails und entspannter Stimmung im Wasser. Ideal für alle, die den Feierabend mit Stil genießen möchten. DJ Jonny ist am 26.06.2025 und 31.07.2025 am Start.
+</p>
     </div>
   </div>
 </li>
